ci: set up the github action to be triggered manually

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     # 1 hour after the US market opens (UTC)
     - cron:  '30 14 * * 1-5'
+  workflow_dispatch:
+
 jobs:
   Market-Check-Action:
     runs-on: ubuntu-latest
