fix: raise error instead of finish successfully

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Market-Check-Action:
+  US-Market-Check-Action:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
