--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
         run: python main.py
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }} 
-          PRIMARY_RECEPIENT: ${{ env.PRIMARY_RECEPIENT }}
-          DEBUG_RECEPIENT: ${{ env.DEBUG_RECEPIENT }} 
+          PRIMARY_RECEPIENT: ${{ vars.PRIMARY_RECEPIENT }}
+          DEBUG_RECEPIENT: ${{ vars.DEBUG_RECEPIENT }} 
 
       - name: Print end time
         run: echo "The end time is $(date)"
