feat: Added prisma mongodb privisioning

--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
 RESEND_API_KEY=
 PRIMARY_RECEPIENT=
-
 DEBUG_RECEPIENT=
+
+# Optional: Must be a mongodb cluster connection URL (include the new database name)
+DATABASE_URL=
