--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,17 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Initialise Prisma Client
+        run: |
+          prisma generate
+
       - name: Run script 
         run: python main.py # this will outputs a new file (metadata.json)
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }} 
           PRIMARY_RECEPIENT: ${{ vars.PRIMARY_RECEPIENT }}
           DEBUG_RECEPIENT: ${{ vars.DEBUG_RECEPIENT }} 
+          DATABASE_URL: ${{ secrets.DATABASE_URL }} 
 
       - name: Save artefact
         uses: actions/upload-artifact@v3
