--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Print start time
         run: echo "The start time is $(date)"
@@ -42,6 +42,20 @@ jobs:
         with:
           name: metadata
           path: metadata.json
+
+      - name: Set up node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install node dependencies
+        run: npm install
+
+      - name: Run script 
+        run: npm run email # this will consume the metadata.json file
+        env:
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }} 
+          PRIMARY_RECEPIENT: ${{ vars.PRIMARY_RECEPIENT }}
 
       - name: Print end time
         run: echo "The end time is $(date)"
