fix: rectify wrong file references in email script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stock-alarm",
   "version": "1.0.0",
   "scripts": {
-    "email": "tsx send-email.ts",
+    "email": "tsx send-email.tsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
