chore: rename watchlist.json to watchlist-us.json
allows the watchlist to be market specific

--- a/.github/workflows/watchlist-validator.yml
+++ b/.github/workflows/watchlist-validator.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           json_schema: schema/schema.json
           files: |
-            watchlist.json
+            watchlist-us.json
