--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ anyio==4.3.0
 appdirs==1.4.4
 beautifulsoup4==4.12.3
 certifi==2024.2.2
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+curl_cffi==0.10.0
 exceptiongroup==1.2.0
 frozendict==2.4.0
 h11==0.14.0
@@ -20,7 +22,10 @@ nodeenv==1.8.0
 numpy==1.26.4
 pandas==2.2.1
 peewee==3.17.1
+platformdirs==4.3.6
 prisma==0.12.0
+protobuf==6.30.2
+pycparser==2.22
 pydantic==2.6.4
 pydantic_core==2.16.3
 python-dateutil==2.9.0.post0
@@ -37,4 +42,5 @@ typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.0
 webencodings==0.5.1
-yfinance==0.2.54
+websockets==15.0.1
+yfinance==0.2.61
